--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "carloscuesta.me",
   "version": "1.0.0",
+  "engines": {
+    "node": "5.0.0"
+  },
   "description": "Carlos Cuesta website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "node-sass-middleware": "^0.9.7"
   }
 }
