Add src/app folder, update package and readme.
Added the structure of the application and the files that is using,
templates scripts and styles.

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "jade": "^1.11.0",
     "node-fetch": "^1.3.3",
     "node-sass-middleware": "^0.9.7"
+  },
+  "devDependencies": {
+    "flexboxgrid": "^6.3.0"
   }
 }
