--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "node-fetch": "^1.3.3",
-    "node-sass-middleware": "^0.9.7"
+    "node-sass-middleware": "^0.9.7",
+    "dotenv": "^1.2.0"
   },
   "devDependencies": {
     "flexboxgrid": "^6.3.0",
+    "memory-cache": "^0.1.4",
     "mocha": "^2.3.4",
     "should": "^7.1.1",
     "supertest": "^1.1.0"
