--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carloscuesta.me",
   "version": "1.0.0",
   "engines": {
-    "node": "5.0.0"
+    "node": "4.2.3"
   },
   "description": "Carlos Cuesta website.",
   "main": "index.js",
@@ -29,6 +29,7 @@
     "compression": "^1.6.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "ghost": "^0.7.3",
     "jade": "^1.11.0",
     "memory-cache": "^0.1.4",
     "node-fetch": "^1.3.3",
