--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "compression": "^1.6.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
-    "ghost": "^0.7.3",
+    "form-data": "^1.0.0-rc3",
+    "ghost": "^0.7.4",
     "jade": "^1.11.0",
     "memory-cache": "^0.1.4",
     "node-fetch": "^1.3.3",
     "node-sass-middleware": "^0.9.7",
-    "oauth": "^0.9.14"
+    "oauth": "^0.9.14",
+    "twitter-text": "^1.13.2"
   },
   "devDependencies": {
     "mocha": "^2.3.4",
