--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,8 @@
+languages:
+  Ruby: true
+  JavaScript: true
+  PHP: true
+  Python: true
 exclude_paths:
-  - src/app/ghost/*
+- "src/app/static/js/ga.js"
+- "src/app/ghost/*"
