Add gruntfile, update travis and package.json
Add gruntfile to check pagespeed with travis-ci, add grunt and
grunt-pagespeed as devdependencies in the package.json.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "twitter-text": "^1.13.2"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-pagespeed": "^2.0.0",
     "mocha": "^2.3.4",
     "should": "^8.0.1",
     "supertest": "^1.1.0"
