Update travis and package.json
Modified travis to install grunt-cli -g, add npm run pagespeed to the
package.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
   - '4.2.3'
+before_install: npm install -g grunt-cli
 script:
   - npm run test
-  - grunt
+  - npm run pagespeed
 addons:
     code_climate:
         repo_token: 18cef61fdbd957e9d6d94b3b6bf7a07da9321eda1f5dad64ef222d7b8e7f980c
