--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha test/app.js"
+    "test": "mocha test/app.js",
+    "pagespeed": "grunt"
   },
   "repository": {
     "type": "git",
