--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.13.3",
     "form-data": "^1.0.0-rc3",
     "ghost": "^0.7.4",
+    "ghost-cloudinary-store": "^1.1.2",
     "jade": "^1.11.0",
     "memory-cache": "^0.1.4",
     "node-fetch": "^1.3.3",
