--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-fetch": "^1.3.3",
     "node-sass-middleware": "^0.9.7",
     "oauth": "^0.9.14",
+    "striptags": "^2.1.0",
     "twitter-text": "^1.13.2"
   },
   "devDependencies": {
