--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Carlos Cuesta website.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "forever index.js",
     "test": "mocha test/app.js",
     "pagespeed": "grunt"
   },
@@ -30,6 +30,7 @@
     "compression": "^1.6.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "forever": "^0.15.1",
     "ghost": "^0.7.4",
     "ghost-cloudinary-store": "^1.1.2",
     "jade": "^1.11.0",
