--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "forever index.js",
-    "test": "mocha test/app.js",
-    "pagespeed": "grunt"
+    "pagespeed": "grunt",
+    "test": "mocha test/app.js && npm run pagespeed"
   },
   "repository": {
     "type": "git",
