--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - '4.2.3'
+  - '4.4.1'
 before_install: npm install -g grunt-cli
 script:
   - npm test
-after_success:
-  - coveralls
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
