Add more tests, update aboutme template and style, update package.json
Add tests to check the cache-control header, refactored tests. Update
readme with the coveralls badge, updated styles and templates for
aboutme to separate the styles from the index view. Add coverage/
folder to .gitignore. Removed x2 test at the package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "forever index.js",
     "pagespeed": "grunt",
     "coveralls": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
-    "test": "mocha test/app.js && npm run pagespeed && npm run coveralls"
+    "test": "npm run coveralls && npm run pagespeed"
   },
   "repository": {
     "type": "git",
