--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node-fetch": "^1.5.1",
     "node-sass-middleware": "^0.9.7",
     "oauth": "^0.9.14",
-    "pug": "^2.0.0-alpha6",
+    "pug": "^2.0.0-beta3",
     "striptags": "^2.1.1",
     "twitter-text": "^1.13.4"
   },
