--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "forever index.js",
+	"dev": "nodejs-dashboard node index.js",
     "pagespeed": "grunt",
     "coveralls": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
     "test": "npm run coveralls && npm run pagespeed"
@@ -32,8 +33,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "forever": "^0.15.2",
-    "ghost": "^0.11.1",
-    "ghost-cloudinary-store": "mmornati/ghost-cloudinary-store",
+    "ghost": "^0.11.2",
+    "ghost-cloudinary-store": "carloscuesta/ghost-cloudinary-store",
     "memory-cache": "^0.1.4",
     "moment": "^2.15.0",
     "node-fetch": "^1.6.3",
@@ -49,6 +50,7 @@
     "grunt-pagespeed": "^2.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.0",
+    "nodejs-dashboard": "^0.1.0",
     "should": "^11.1.1",
     "supertest": "^2.0.0"
   }
