--- a/src/app/static/manifest.json
+++ b/src/app/static/manifest.json
@@ -4,7 +4,7 @@
  "description": "Carlos Cuesta, Front End developer based in Barcelona, Spain. Coding addicted that enjoys building things with code, I like design, technology and OpenSource.",
  "theme_color": "#ff5252",
  "background_color": "#ffffff",
- "display": "none",
+ "display": "standalone",
  "start_url": "/",
  "icons": [
   {
