--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "carloscuesta.me",
   "version": "1.0.0",
   "engines": {
-    "node": "6.11.2"
+    "node": "6.11.3"
   },
   "description": "Carlos Cuesta website.",
-  "main": "index.js",
+  "main": "carloscuesta.js",
   "scripts": {
-    "start": "forever index.js",
+    "start": "pm2 start carloscuesta.js",
     "start:dev": "nodemon index.js",
     "pagespeed": "grunt",
     "coveralls": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
@@ -32,7 +32,6 @@
     "compression": "^1.6.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "forever": "^0.15.2",
     "ghost": "^0.11.10",
     "ghost-cloudinary-store": "carloscuesta/ghost-cloudinary-store",
     "memory-cache": "^0.2.0",
