:wrench: Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "carloscuesta.js",
   "scripts": {
     "start": "pm2 start carloscuesta.js",
-    "start:dev": "nodemon index.js",
+    "start:dev": "nodemon carloscuesta.js",
     "pagespeed": "grunt",
     "coveralls": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
     "test": "npm run coveralls && npm run pagespeed"
