--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "scripts": {
     "start": "pm2 start carloscuesta.js",
     "start:dev": "nodemon carloscuesta.js",
+    "test:unit": "jest --coverage",
+    "lint": "standard",
     "pagespeed": "grunt",
-    "coveralls": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*",
-    "test": "npm run coveralls && npm run pagespeed"
+    "test": "npm run lint && npm run test:unit && npm run pagespeed"
+  },
+  "standard": {
+    "ignore": [
+      "src/public/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -45,10 +51,9 @@
     "coveralls": "^3.0.0",
     "grunt": "^1.0.0",
     "grunt-pagespeed": "^2.0.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^4.0.1",
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1",
-    "should": "^13.1.1",
+    "standard": "^10.0.3",
     "supertest": "^3.0.0"
   }
 }
