--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,5 @@
 languages:
   JavaScript: true
 exclude_paths:
-- "src/app/static/js/ga.js"
+- "src/app/static/js/analytics.js"
 - "src/app/static/css/font.css"
