--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carloscuesta.me",
   "version": "1.0.0",
   "engines": {
-    "node": "10.16.3"
+    "node": ">=12.17.0"
   },
   "description": "Carlos Cuesta website.",
   "main": "carloscuesta.js",
