--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
   "main": "carloscuesta.js",
   "scripts": {
     "start": "pm2 start carloscuesta.js",
-    "start:dev": "NODE_ENV=development nodemon carloscuesta.js",
+    "dev": "next",
     "test:unit": "jest --coverage",
-    "lint": "standard",
+    "lint": "standard | snazzy",
     "pagespeed": "grunt",
-    "test": "npm run lint && npm run test:unit && npm run pagespeed"
-  },
-  "standard": {
-    "ignore": [
-      "src/public/"
-    ]
+    "test": "npm run lint && npm run test:unit && npm run pagespeed",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
@@ -45,12 +41,47 @@
     "striptags": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.10.1",
+    "babel-eslint": "^10.1.0",
     "coveralls": "^3.0.7",
+    "eslint-plugin-flowtype": "^5.1.3",
+    "flow-bin": "^0.125.1",
     "grunt": "^1.0.4",
     "grunt-pagespeed": "^2.0.1",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
+    "lint-staged": "^10.2.7",
     "nodemon": "^2.0.1",
+    "snazzy": "^8.0.0",
     "standard": "^14.3.3",
     "supertest": "^4.0.2"
+  },
+  "babel": {
+    "presets": [
+      "next/babel",
+      "@babel/preset-flow"
+    ]
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "src/public"
+    ],
+    "plugins": [
+      "flowtype"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "standard --fix"
+    ]
   }
 }
