--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "flexboxgrid": "^6.3.1",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "next": "^9.4.4",
