--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "flexboxgrid": "^6.3.1",
+    "lazysizes": "^5.2.2",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "next": "^9.4.4",
