--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
     "node": ">=12.17.0"
   },
   "description": "Carlos Cuesta website.",
-  "main": "carloscuesta.js",
   "scripts": {
-    "start": "pm2 start carloscuesta.js",
+    "build": "next build",
     "dev": "next",
+    "start": "pm2 start npm --name 'carloscuesta' -- start",
+    "test:flow": "flow",
+    "test:lint": "standard | snazzy",
     "test:unit": "jest --coverage",
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
-    "lint": "standard | snazzy",
-    "pagespeed": "grunt",
-    "test": "npm run lint && npm run test:unit && npm run pagespeed",
-    "flow": "flow"
+    "test": "npm run test:lint && npm run test:flow && npm run test:unit"
   },
   "repository": {
     "type": "git",
@@ -27,20 +26,12 @@
   },
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
-    "compression": "^1.7.4",
     "disqus-react": "^1.0.8",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "flexboxgrid": "^6.3.1",
     "lazysizes": "^5.2.2",
-    "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "next": "^9.4.4",
     "node-cache": "^5.1.0",
-    "node-fetch": "^2.6.0",
-    "node-sass-middleware": "^0.11.0",
-    "oauth": "^0.9.15",
-    "pug": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "striptags": "^3.1.1"
@@ -51,18 +42,14 @@
     "coveralls": "^3.0.7",
     "eslint-plugin-flowtype": "^5.1.3",
     "flow-bin": "^0.125.1",
-    "grunt": "^1.0.4",
-    "grunt-pagespeed": "^2.0.1",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.2.7",
-    "nodemon": "^2.0.1",
     "react-test-renderer": "16.13.1",
     "snazzy": "^8.0.0",
-    "standard": "^14.3.3",
-    "supertest": "^4.0.2"
+    "standard": "^14.3.3"
   },
   "babel": {
     "presets": [
