--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
   "dependencies": {
     "disqus-react": "^1.0.8",
     "flexboxgrid": "^6.3.1",
+    "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
     "moment": "^2.24.0",
     "next": "^9.4.4",
     "node-cache": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "striptags": "^3.1.1"
+    "remark": "^12.0.0",
+    "remark-external-links": "^6.1.0",
+    "remark-html": "^11.0.2"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.1",
