--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
+    "date-fns": "^2.14.0",
     "disqus-react": "^1.0.8",
     "flexboxgrid": "^6.3.1",
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
-    "moment": "^2.24.0",
     "next": "^9.4.4",
     "node-cache": "^5.1.0",
     "react": "^16.13.1",
