--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
     "next": "^9.4.4",
+    "next-seo": "^4.5.0",
     "node-cache": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
