--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "flexboxgrid": "^6.3.1",
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
+    "lodash.groupby": "^4.6.0",
     "next": "^9.4.4",
     "next-seo": "^4.5.0",
     "react": "^16.13.1",
