--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-- 12.17.0
+  - 12.17.0
 before_install: npm install -g grunt-cli
 script:
-- npm test
-after_script: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - npm run test
+  - npm run test:coverage
 notifications:
   email: false
   slack:
