--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "next build",
     "dev": "next",
     "start": "pm2 start npm --name 'carloscuesta' -- start",
+    "test": "npm run test:lint && npm run test:flow && npm run test:unit",
     "test:flow": "flow",
     "test:lint": "standard | snazzy",
     "test:lint:fix": "standard --fix | snazzy",
     "test:unit": "jest --coverage",
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
-    "test": "npm run test:lint && npm run test:flow && npm run test:unit"
+    "test:coverage": "codecov"
   },
   "repository": {
     "type": "git",
@@ -43,7 +44,7 @@
   "devDependencies": {
     "@babel/preset-flow": "^7.10.1",
     "babel-eslint": "^10.1.0",
-    "coveralls": "^3.0.7",
+    "codecov": "^3.7.0",
     "eslint-plugin-flowtype": "^5.1.3",
     "flow-bin": "^0.125.1",
     "husky": "^4.2.5",
