--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
       "!src/**/__tests__/*.{js,jsx}"
     ],
     "moduleNameMapper": {
-      "src/(.*)$": "<rootDir>/src/$1",
-      "^.+\\.css$": "identity-obj-proxy"
+      "^.+\\.css$": "identity-obj-proxy",
+      "src/(.*)$": "<rootDir>/src/$1"
     },
     "testMatch": [
       "<rootDir>/**/*.(spec).(js)"
