--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:lint:fix": "standard --fix | snazzy",
     "test:unit": "jest --coverage",
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
-    "test:coverage": "codecov"
+    "test:coverage": "codecov",
+    "prebuild": "node ./scripts/sitemap"
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.2.7",
     "react-test-renderer": "16.13.1",
+    "sitemap": "^6.1.6",
     "snazzy": "^8.0.0",
     "standard": "^14.3.3"
   },
