--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "remark": "^12.0.0",
+    "remark-autolink-headings": "^6.0.1",
     "remark-external-links": "^6.1.0",
-    "remark-html": "^11.0.2"
+    "remark-html": "^11.0.2",
+    "remark-slug": "^6.0.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.1",
