--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,49 +4,49 @@
   "theme_color": "#FF5252",
   "background_color": "#FF5252",
   "display": "minimal-ui",
+  "Scope": "/",
   "start_url": "/",
   "icons": [
     {
-      "src": "\/favicon\/android-icon-36x36.png",
-      "sizes": "36x36",
-      "type": "image\/favicon\/png",
-      "density": "0.75"
-    },
-    {
-      "src": "\/favicon\/android-icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image\/favicon\/png",
-      "density": "1.0"
-    },
-    {
-      "src": "\/favicon\/android-icon-72x72.png",
+      "src": "favicon/icon-72x72.png",
       "sizes": "72x72",
-      "type": "image\/favicon\/png",
-      "density": "1.5"
+      "type": "image/png"
     },
     {
-      "src": "\/favicon\/android-icon-96x96.png",
+      "src": "favicon/icon-96x96.png",
       "sizes": "96x96",
-      "type": "image\/favicon\/png",
-      "density": "2.0"
+      "type": "image/png"
     },
     {
-      "src": "\/favicon\/android-icon-144x144.png",
+      "src": "favicon/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon/icon-144x144.png",
       "sizes": "144x144",
-      "type": "image\/favicon\/png",
-      "density": "3.0"
+      "type": "image/png"
     },
     {
-      "src": "\/favicon\/android-icon-192x192.png",
+      "src": "favicon/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image\/favicon\/png",
-      "density": "4.0"
+      "type": "image/png"
     },
     {
-      "src": "\/favicon\/android-icon-512x512.png",
+      "src": "favicon/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image\/favicon\/png",
-      "density": "4.0"
+      "type": "image/png"
     }
-  ]
+  ],
+  "splash_pages": null
 }
