--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "Carlos Cuesta website.",
   "scripts": {
-    "build": "next build && next export",
+    "build": "next build",
     "dev": "next",
     "start": "next start",
     "test": "npm run test:lint && npm run test:flow && npm run test:unit && npm run test:lighthouse",
