--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
     "date-fns": "^2.14.0",
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
@@ -38,11 +39,13 @@
     "next-seo": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "remark": "^12.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-external-links": "^6.1.0",
-    "remark-html": "^11.0.2",
-    "remark-slug": "^6.0.0"
+    "remark-parse": "^8.0.3",
+    "remark-rehype": "^7.0.0",
+    "remark-slug": "^6.0.0",
+    "unified": "^9.0.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.4",
