--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark-parse": "^8.0.3",
     "remark-rehype": "^7.0.0",
     "remark-slug": "^6.0.0",
+    "remark-toc": "^7.0.0",
     "unified": "^9.1.0"
   },
   "devDependencies": {
