--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-seo": "^4.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rehype-preset-minify": "^5.0.3",
     "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-external-links": "^6.1.0",
