--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
     "date-fns": "^2.15.0",
+    "disqus-react": "^1.0.9",
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
     "lodash.groupby": "^4.6.0",
@@ -39,6 +40,7 @@
     "next-seo": "^4.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.26.2",
     "rehype-preset-minify": "^5.0.3",
     "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.1",
