--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lazysizes": "^5.2.2",
     "lodash.groupby": "^4.6.0",
     "next": "^9.5.2",
+    "next-pwa": "^3.1.3",
     "next-seo": "^4.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
