:wrench: Add maskable icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -46,6 +46,12 @@
       "src": "favicon/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "favicon/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "splash_pages": null
