--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
     "lodash.groupby": "^4.6.0",
-    "next": "^9.5.5",
+    "next": "^10.0.0",
     "next-pwa": "^3.1.5",
     "next-seo": "^4.14.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.29.1",
     "rehype-preset-minify": "^5.1.0",
     "rehype-stringify": "^8.0.0",
@@ -64,7 +64,7 @@
     "jest": "^26.6.1",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.0",
-    "react-test-renderer": "16.14.0",
+    "react-test-renderer": "^17.0.1",
     "sitemap": "^6.3.2",
     "snazzy": "^8.0.0",
     "standard": "^15.0.0"
