--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-external-links": "^8.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "remark-slug": "^6.0.0",
