--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
     "test:lighthouse": "yarn run build && lhci autorun",
-    "prebuild": "node ./scripts/sitemap"
+    "postbuild": "next-sitemap"
   },
   "repository": {
     "type": "git",
@@ -66,8 +66,8 @@
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.3",
+    "next-sitemap": "^1.3.32",
     "react-test-renderer": "^17.0.1",
-    "sitemap": "^6.3.5",
     "snazzy": "^9.0.0",
     "standard": "^16.0.3"
   },
