--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
+    "reading-time": "^1.3.0",
     "rehype-preset-minify": "^5.1.0",
     "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.1",
