--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
     "test:lighthouse": "yarn run build && lhci autorun",
-    "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap && minify public/prism/prism.css > public/prism/prism.min.css && mv -f public/prism/prism.min.css public/prism/prism.css",
     "prepare": "husky install"
   },
   "repository": {
@@ -68,6 +68,7 @@
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
+    "minify": "^7.0.2",
     "next-sitemap": "^1.6.49",
     "react-test-renderer": "^17.0.2",
     "snazzy": "^9.0.0",
