🔧 Transform unified to prevent jest esModule failing

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "testMatch": [
       "<rootDir>/**/*.(spec).(js)"
     ],
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": ["!/node_modules/unified"]
   }
 }
