--- a/package.json
+++ b/package.json
@@ -45,16 +45,16 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "reading-time": "^1.3.0",
-    "rehype-preset-minify": "^5.1.0",
-    "rehype-stringify": "^8.0.0",
-    "remark-autolink-headings": "^6.1.0",
-    "remark-external-links": "^8.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.1.0",
-    "remark-slug": "^6.1.0",
-    "remark-toc": "^7.2.0",
-    "unified": "^9.2.1"
+    "rehype-preset-minify": "^6.0.0",
+    "rehype-stringify": "^9.0.1",
+    "remark-autolink-headings": "^7.0.0",
+    "remark-external-links": "^9.0.0",
+    "remark-gfm": "^2.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^9.0.0",
+    "remark-slug": "^7.0.0",
+    "remark-toc": "^8.0.0",
+    "unified": "^10.1.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.14.5",
@@ -107,6 +107,7 @@
     "testMatch": [
       "<rootDir>/**/*.(spec).(js)"
     ],
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": ["!/node_modules/unified"]
   }
 }
