--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "next start",
     "test": "yarn run test:lint && yarn run test:flow && yarn run test:unit && yarn run test:lighthouse",
     "test:flow": "flow",
-    "test:lint": "standard | snazzy",
-    "test:lint:fix": "standard --fix | snazzy",
+    "test:lint": "eslint src",
+    "test:lint:fix": "eslint src --fix",
     "test:unit": "jest --coverage",
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
@@ -57,11 +57,18 @@
     "unified": "^10.1.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.0",
     "@babel/preset-flow": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@lhci/cli": "^0.8.0",
-    "babel-eslint": "^10.1.0",
     "codecov": "^3.8.3",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-flowtype": "^5.9.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "flow-bin": "^0.157.0",
     "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -70,28 +77,88 @@
     "lint-staged": "^11.1.2",
     "minify": "^7.0.2",
     "next-sitemap": "^1.6.157",
-    "react-test-renderer": "^17.0.2",
-    "snazzy": "^9.0.0",
-    "standard": "^16.0.3"
+    "react-test-renderer": "^17.0.2"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "env": [
-      "jest"
+  "eslintConfig": {
+    "parser": "@babel/eslint-parser",
+    "env": {
+      "jest": true,
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": [
+      "next",
+      "eslint:recommended",
+      "plugin:flowtype/recommended",
+      "plugin:react/recommended",
+      "plugin:import/errors"
     ],
-    "ignore": [
-      "public/**/*"
-    ],
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module",
+      "requireConfigFile": false,
+      "babelOptions": {
+        "presets": [
+          "next/babel",
+          "@babel/preset-react",
+          "@babel/preset-flow"
+        ]
+      }
+    },
     "plugins": [
+      "react",
       "flowtype"
     ],
-    "globals": [
-      "$Diff",
-      "fetch"
-    ]
+    "rules": {
+      "flowtype/require-valid-file-annotation": [
+        2,
+        "always",
+        {
+          "annotationStyle": "line"
+        }
+      ],
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "@next/next/no-img-element": "off"
+    },
+    "overrides": [
+      {
+        "files": [
+          "*.spec.js",
+          "stubs.js",
+          "**/__mocks__/*.js"
+        ],
+        "rules": {
+          "flowtype/require-valid-file-annotation": 0,
+          "react/display-name": 0,
+          "react/prop-types": 0,
+          "@next/next/no-css-tags": 0
+        }
+      }
+    ],
+    "settings": {
+      "react": {
+        "version": "detect",
+        "flowVersion": "detect"
+      },
+      "import/resolver": {
+        "alias": {
+          "map": [
+            [
+              "src",
+              "./src"
+            ]
+          ]
+        }
+      }
+    }
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "yarn run test:lint:fix"
     ]
   },
@@ -108,6 +175,8 @@
       "<rootDir>/**/*.(spec).(js)"
     ],
     "testEnvironment": "jsdom",
-    "transformIgnorePatterns": ["!/node_modules/unified"]
+    "transformIgnorePatterns": [
+      "!/node_modules/unified"
+    ]
   }
 }
