♻️  Replace remark deprecated dependencies

--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "reading-time": "^1.4.0",
+    "rehype-autolink-headings": "^6.0.0",
+    "rehype-external-links": "^1.0.0",
     "rehype-preset-minify": "^6.0.0",
     "rehype-stringify": "^9.0.1",
-    "remark-autolink-headings": "^7.0.0",
-    "remark-external-links": "^9.0.0",
     "remark-gfm": "^2.0.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
