--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "rehype-autolink-headings": "^6.1.0",
     "rehype-external-links": "^1.0.0",
     "rehype-preset-minify": "^6.0.0",
+    "rehype-slug": "^5.0.0",
     "rehype-stringify": "^9.0.2",
     "remark-gfm": "^3.0.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^10.0.0",
-    "remark-slug": "^7.0.0",
     "remark-toc": "^8.0.0",
     "unified": "^10.1.0"
   },
