--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carloscuesta.me",
   "version": "5.1.0",
   "engines": {
-    "node": "14"
+    "node": "16"
   },
   "description": "Carlos Cuesta website.",
   "scripts": {
@@ -179,5 +179,8 @@
     "transformIgnorePatterns": [
       "!/node_modules/unified"
     ]
+  },
+  "volta": {
+    "node": "16.15.0"
   }
 }
