--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rehype-preset-minify": "^6.0.0",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
+    "rehype-wrap-all": "^1.1.0",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
