--- a/package.json
+++ b/package.json
@@ -63,6 +63,11 @@
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@lhci/cli": "^0.10.0",
+    "@types/jest": "29.4.0",
+    "@types/react": "18.0.27",
+    "@types/react-test-renderer": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
     "clean-css-cli": "^5.6.2",
     "codecov": "^3.8.3",
     "eslint": "^8.33.0",
@@ -80,7 +85,8 @@
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^13.1.0",
     "next-sitemap": "^2.5.28",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "typescript": "4.9.5"
   },
   "eslintConfig": {
     "parser": "@babel/eslint-parser",
