♻️ Migrate `lint-staged` to .ts(x) files

--- a/package.json
+++ b/package.json
@@ -167,7 +167,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.js": [
+    "src/**/*.{ts,tsx,css}": [
       "yarn run test:lint:fix"
     ]
   },
