--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "next build",
     "dev": "next",
     "start": "next start",
-    "test": "yarn run test:lint && yarn run test:flow && yarn run test:unit && yarn run test:lighthouse",
-    "test:flow": "flow",
+    "test": "yarn run test:lint && yarn run tscheck && yarn run test:unit && yarn run test:lighthouse",
+    "tscheck": "yarn tsc --noEmit",
     "test:lint": "eslint src",
     "test:lint:fix": "eslint src --fix",
     "test:unit": "jest --coverage",
