--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@babel/eslint-parser": "^7.19.1",
     "@lhci/cli": "^0.10.0",
     "@types/jest": "29.4.0",
+    "@types/lodash.debounce": "4.0.7",
+    "@types/lodash.groupby": "4.6.7",
     "@types/react": "18.0.27",
     "@types/react-test-renderer": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.49.0",
