--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/jest": "29.4.0",
     "@types/lodash.debounce": "4.0.7",
     "@types/lodash.groupby": "4.6.7",
+    "@types/mapbox__rehype-prism": "0.8.0",
     "@types/react": "18.0.27",
     "@types/react-test-renderer": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.49.0",
