--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     "rules": {
       "react/jsx-uses-react": "off",
       "react/react-in-jsx-scope": "off",
-      "@next/next/no-img-element": "off"
+      "@next/next/no-img-element": "off",
+      "@typescript-eslint/no-var-requires": "off"
     },
     "overrides": [
       {
