--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
     "rehype-preset-minify": "^6.0.0",
+    "rehype-prism-plus": "1.5.1",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "rehype-wrap-all": "^1.1.0",
