--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-test-renderer": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
+    "autoprefixer": "10.4.14",
     "clean-css-cli": "^5.6.2",
     "codecov": "^3.8.3",
     "eslint": "^8.38.0",
@@ -82,8 +83,10 @@
     "lint-staged": "^13.2.1",
     "msw": "1.2.1",
     "next-sitemap": "^2.5.28",
+    "postcss": "8.4.21",
     "react-test-renderer": "^18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "tailwindcss": "3.2.7"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
