--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
       "react/jsx-uses-react": "off",
       "react/react-in-jsx-scope": "off",
       "@next/next/no-img-element": "off",
-      "@typescript-eslint/no-var-requires": "off"
+      "@typescript-eslint/no-var-requires": "off",
+      "react/no-unescaped-entities": "off"
     },
     "overrides": [
       {
