--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@lhci/cli": "^0.11.0",
+    "@tailwindcss/typography": "0.5.9",
     "@types/jest": "29.5.0",
     "@types/lodash.debounce": "4.0.7",
     "@types/lodash.groupby": "4.6.7",
