--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "msw": "1.2.1",
     "next-sitemap": "^2.5.28",
     "postcss": "8.4.21",
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "0.2.6",
     "react-test-renderer": "^18.2.0",
     "typescript": "5.0.4",
     "tailwindcss": "3.2.7"
