--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^13.3.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.0.0",
+    "next-themes": "0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
