--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^13.2.0",
+    "msw": "1.2.1",
     "next-sitemap": "^2.5.28",
     "react-test-renderer": "^18.2.0",
     "typescript": "5.0.3"
