--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash.truncate": "4.4.7",
     "@vercel/analytics": "^0.1.11",
     "add": "2.0.6",
+    "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^2.29.3",
     "disqus-react": "^1.1.5",
     "gray-matter": "^4.0.3",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@lhci/cli": "^0.11.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/body-scroll-lock": "3.1.0",
     "@types/jest": "29.5.0",
     "@types/lodash.debounce": "4.0.7",
     "@types/lodash.groupby": "4.6.7",
