--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@headlessui/react": "1.7.14",
     "@types/lodash.truncate": "4.4.7",
     "@vercel/analytics": "^1.0.0",
+    "@vercel/kv": "0.1.1",
     "add": "2.0.6",
     "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^2.30.0",
@@ -61,6 +62,7 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
+    "swr": "2.1.5",
     "tailwind-scrollbar-hide": "1.1.7",
     "unified": "^10.1.2",
     "yarn": "1.22.19"
