--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
+    "sharp": "0.32.1",
     "swr": "2.1.5",
     "tailwind-scrollbar-hide": "1.1.7",
     "unified": "^10.1.2",
