--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "cleanUrls": true,
-  "headers": [
-    {
-      "source": "/inter-var-latin.woff2",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ]
+  "cleanUrls": true
 }
