🔧 Allow `tw` attribute in `opengraph-images`

--- a/package.json
+++ b/package.json
@@ -175,6 +175,21 @@
             }
           ]
         }
+      },
+      {
+        "files": [
+          "opengraph-image.tsx"
+        ],
+        "rules": {
+          "react/no-unknown-property": [
+            2,
+            {
+              "ignore": [
+                "tw"
+              ]
+            }
+          ]
+        }
       }
     ],
     "settings": {
