✨ Switch /blog syntax highlighter (#1422)
* ➕ Install rehype-pretty-code

* ♻️ Replace rehype-prism-plus with rehype-pretty-code

* ➖ Remove rehype-prism-plus

* 🔥 Remove prism.css from `postbuild`

* 🔥 Remove prism.css styles

* ➖ Remove clean-css-cli

* 💄 Add theme pre, code global styles

* ➕ Install sprinkles-vscode

* ✨ Add light/dark themes for code snippet

* 🔧 Add `rehype-pretty-code` to moduleNameMapper`

* 📸 Update snapshots

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
     "test:lighthouse": "yarn run build && lhci autorun",
-    "postbuild": "cleancss public/prism.css -o public/prism.min.css && mv -f public/prism.min.css public/prism.css && rm -rf public/mockServiceWorker.js && next-sitemap",
+    "postbuild": "rm -rf public/mockServiceWorker.js && next-sitemap",
     "prepare": "husky install"
   },
   "repository": {
@@ -55,7 +55,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.0",
-    "rehype-prism-plus": "1.6.3",
+    "rehype-pretty-code": "0.12.3",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "10.0.0",
     "rehype-wrap-all": "^1.1.0",
@@ -65,6 +65,8 @@
     "remark-toc": "^9.0.0",
     "satori": "0.10.9",
     "sharp": "0.32.6",
+    "shikiji": "^0.9.0",
+    "sprinkles-vscode": "2.7.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
     "unified": "11.0.4",
@@ -83,7 +85,6 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "10.4.16",
-    "clean-css-cli": "^5.6.3",
     "codecov": "^3.8.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
