--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,47 +6,47 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "favicon/icon-72x72.png",
+      "src": "favicon/icon.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-96x96.png",
+      "src": "favicon/icon.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-128x128.png",
+      "src": "favicon/icon.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-144x144.png",
+      "src": "favicon/icon.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-152x152.png",
+      "src": "favicon/icon.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-192x192.png",
+      "src": "favicon/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-384x384.png",
+      "src": "favicon/icon.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-512x512.png",
+      "src": "favicon/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "favicon/icon-512x512.png",
+      "src": "favicon/icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
