➕ Install `uglify-js` devDependency

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
+    "uglify-js": "3.17.4",
     "vfile": "6.0.1"
   },
   "eslintConfig": {
