--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "build": "next build",
     "dev": "next",
     "start": "next start",
-    "test": "yarn run test:lint && yarn run tscheck && yarn run test:unit && yarn run test:lighthouse",
-    "tscheck": "yarn tsc --noEmit",
+    "test": "pnpm run test:lint && pnpm run tscheck && pnpm run test:unit && pnpm run test:lighthouse",
+    "tscheck": "pnpm tsc --noEmit",
     "test:lint": "eslint src && prettier --check src",
     "test:unit": "jest --coverage",
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
-    "test:lighthouse": "yarn run build && lhci autorun",
+    "test:lighthouse": "pnpm run build && lhci autorun",
     "postbuild": "rm -rf public/mockServiceWorker.js && next-sitemap",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -69,8 +69,7 @@
     "sprinkles-vscode": "2.7.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
-    "unified": "11.0.4",
-    "yarn": "1.22.21"
+    "unified": "11.0.4"
   },
   "devDependencies": {
     "@lhci/cli": "^0.13.0",
@@ -106,7 +105,9 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "uglify-js": "3.17.4",
+    "vfile": "6.0.1"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -221,9 +222,6 @@
       "prettier --write"
     ]
   },
-  "volta": {
-    "node": "16.20.0"
-  },
   "msw": {
     "workerDirectory": "public"
   },
@@ -231,5 +229,5 @@
     "semi": false,
     "singleQuote": true
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "pnpm@8.15.4"
 }
