➕ Install `classix` and `tailwind-merge` deps

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "10.4.17",
+    "classix": "2.1.36",
     "codecov": "^3.8.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
@@ -105,6 +106,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
     "react-test-renderer": "^18.2.0",
+    "tailwind-merge": "2.2.2",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "uglify-js": "3.17.4",
