➕ Install `@verce/speed-insights`

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/lodash.truncate": "4.4.9",
     "@vercel/analytics": "^1.2.2",
     "@vercel/kv": "0.2.2",
-    "add": "2.0.6",
+    "@vercel/speed-insights": "1.0.10",
     "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
