♻️ Replace `body-scroll-lock`

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "3.0.0",
     "@vercel/speed-insights": "1.1.0",
-    "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^4.1.0",
     "feed": "4.2.2",
     "lodash.groupby": "^4.6.0",
@@ -52,6 +51,7 @@
     "plaiceholder": "2.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-remove-scroll": "2.6.3",
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.1",
@@ -77,7 +77,6 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
-    "@types/body-scroll-lock": "3.1.2",
     "@types/jest": "29.5.14",
     "@types/lodash.groupby": "4.6.9",
     "@types/react": "19.0.8",
